<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>hector_pointcloud_io</name>
  <version>0.0.0</version>
  <description>Saves a pointcloud from a given topic to a file. Can also be ran as a service server.</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>
  <license>MIT</license>
  <author email="fabian@sim.tu-darmstadt.de">Stefan Fabian</author>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <build_depend>hector_ros2_utils</build_depend>
  <build_export_depend>hector_ros2_utils</build_export_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-common</exec_depend>
  <exec_depend>libpcl-io</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
